--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <p>Hello world!</p>
-
 <head>This is  a </head>
-
-<head>This is  a index</head>
+<head>This is  a index</head><p>this is new</p>
 <p>here i just added a paragraph
     
 </p>
